# tkf-mixdom

./: .gitignore  FSA_PORTING_NOTES.md  NOTES_ggi_dr_dt.md  README.md
python/: .gitignore  build_gap_counts.py  build_marcounts_parallel.py  build_tkf92_cherry_counts.py  build_train_trees_subset.py  check_marcounts_integrity.py  fit_banded_mixdom2_mixture.py  fit_gamma_rates.py  fit_tkf92_mixture.py  make_ggi_flow_portrait.py  maraschino.py  pyproject.toml  scratch_beta_exact.py  scratch_compare_lmr.py  scratch_composite14.py  scratch_composition_verify.py  scratch_fsa_tau_derivs.py  scratch_ggi_clin.py  scratch_ggi_closedform.py  scratch_ggi_cond_kl_ode.py  scratch_ggi_cond_kl_plot.py  scratch_ggi_cond_kl_quad.py  scratch_ggi_del.py  scratch_ggi_flow.py  scratch_ggi_flow_traj.py  scratch_ggi_frag_ode.py  scratch_ggi_kconst.py  scratch_ggi_kratio.py  scratch_ggi_longtime.py  scratch_ggi_pfam_closedform.py  scratch_ggi_pfam_long.py  scratch_ggi_pfam_quick.py  scratch_ggi_pfam_tameness.py  scratch_ggi_rt_collapse.py  scratch_ggi_rt_fit.py  scratch_ggi_slaved_compare.py  scratch_ggi_slope.py  scratch_ggi_suffstat.py  scratch_ggi_transition.py  scratch_ggi_triad.py  (+12 more)
python/experiments/: EVALUATION_PLAN.md  EXPERIMENTAL_DESIGN.md  METRICS_REQUEST.md  METRICS_REQUEST_LONG.md  Makefile.expected_balibase  PIPELINE_EXPERIMENT_PLAN.md  PROTEINGYM_PLAN.md  SVI_ANALYSIS.md  _worker_score.py  _worker_score_batch.py  alignment_benchmark_annabel.py  alignment_benchmark_full.py  ancrec_benchmark.py  ancrec_gap_patterns.py  architectural_comparison_protocol.md  ardca_benchmark.jl  (+120 more)
(+405 files in other folders)
